# fingerprint-wasm

./: .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  README.md  package.json
.github/workflows/: demo.yml
playground/: eslint.config.mjs  package.json  pnpm-lock.yaml  vite.config.ts
playground/src/: App.vue  style.css
playground/src/utils/: wasmLoader.ts
wasm/: Cargo.toml
wasm/src/: agent.rs  confidence.rs  lib.rs
wasm/src/sources/: apple_pay.rs  architecture.rs  audio.rs  audio_base_latency.rs  canvas.rs  color_depth.rs  color_gamut.rs  contrast.rs  cookies_enabled.rs  cpu_class.rs  date_time_locale.rs  device_memory.rs  dom_blockers.rs  font_preferences.rs  fonts.rs  forced_colors.rs  hardware_concurrency.rs  hdr.rs  indexed_db.rs  inverted_colors.rs  languages.rs  local_storage.rs  math.rs  mod.rs  monochrome.rs  open_database.rs  os_cpu.rs  pdf_viewer_enabled.rs  platform.rs  plugins.rs  private_click_measurement.rs  reduced_motion.rs  reduced_transparency.rs  screen_frame.rs  screen_resolution.rs  session_storage.rs  timezone.rs  touch_support.rs  vendor.rs  vendor_flavors.rs  (+1 more)
wasm/src/utils/: async_utils.rs  browser.rs  data.rs  dom.rs  hashing.rs  mod.rs
